Updatefn index.html

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                 <img src="https://drive.google.com/thumbnail?id=1yOlBoezVn2qx1zSTTTcM488zWK2qas5H" alt="Profile">
                             </div>
                             <h1 class="profile-name">John Rick A. Galiza</h1>
-                            <p class="profile-title">Quality Assurance Tester & Engineer | Automation Enthusiast</p>
+                            <p class="profile-title">Entry-Level Quality Assurance Tester & Engineer<br>Automation Enthusiast</p>
                         </div>
 
                         <div class="space-y-4">
